--- a/src/components/AppHome/AppHome.css
+++ b/src/components/AppHome/AppHome.css
@@ -6,22 +6,28 @@
   padding: 0;
 }
 
-.PrincipalGallery {
+.PrincipalHome {
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
   margin: 0;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F6F6F6;
+  background: linear-gradient(rgba(7, 7, 7, 0.9), rgba(7, 7, 7, 0.9)), url('../../assets/tiger.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .App-logo{
+  margin-left: 6rem;
   display: absolute;
   min-width: 7rem;
   min-height: 4rem;
   width: 7rem;
   height: 4rem;
+  cursor: pointer;
 }
 
 .NavBar{
@@ -29,7 +35,7 @@
   display: flex;
   align-items: center;
   width: 100vw;
-  height: 5.8rem;
+  height: 5rem;
   left: 0;
   top: 0;
   background-color: #539D49;
@@ -48,7 +54,7 @@ a:hover{
 }
 
 .info{
-  margin: 3.5rem auto 0 auto;
+  margin: 3.5rem auto 5rem auto;
   width: 45rem;
   display: flex;
   flex-direction: column;
@@ -65,20 +71,6 @@ a:hover{
   padding: 0 0 0.9rem 0;
 }
 
-.copyright{
-  font-size: 12px;
-  margin: 4.5rem auto 0 auto;
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Poppins', sans-serif;
-  text-align: center;
-  font-weight: 300;
-  color: rgb(11, 11, 11);
-}
-
 
 .Info-logo{
   display: flex;
@@ -86,12 +78,21 @@ a:hover{
   height: auto;
 }
 
+
+.Forma2{
+  position: absolute;
+  transform: rotate(-45.53deg);
+  width: 518.9px;
+  height: 446.3px;
+  left: 1100px;
+  top: 550px;
+}
+
 .Forma1{
   position: absolute;
-  width: 454.9px;
-  height: 403.18px;
-  left: -125.55px;
-  top: 729px;
-
-  transform: rotate(19.01deg);
+  width: 808.97px;
+  height: 717px;
+  left: -350px;
+  top: 500px;
+  transform: rotate(16.75deg);
 }
