api integration and its adjustments, fix minor css details, add loading when searching a result, add default animal

--- a/src/components/AppAnimal/AppAnimals.css
+++ b/src/components/AppAnimal/AppAnimals.css
@@ -104,11 +104,11 @@ a:hover{
 }
 
 .InfosContainer{
-  width: 25vw;
+  width: auto;
 }
 
 .Infos{
-  margin-bottom: ;
+  margin-bottom: 1rem;
 }
 
 #Kingdom{
@@ -209,4 +209,9 @@ footer{
   transition: ease-in-out;
   transition: 0.30s;
   background-color: #539D49;
+}
+
+.AnimalLocation{
+  width: auto;
+  height: auto;
 }
