--- a/src/components/Loading/index.css
+++ b/src/components/Loading/index.css
@@ -1,41 +1,29 @@
-.lds-ring {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-}
-
-.lds-ring div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid #ff0000;
+.loader {
+    width: 65px;
+    height: 65px;
+    border: 5px solid #000000;
+    border-bottom-color: transparent;
     border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #ff0000 transparent transparent transparent;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
 }
 
-.lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
-}
+    @keyframes rotation {
+        0% {
+            transform: rotate(0deg);
+        }
 
-.lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
-}
-
-.lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
-}
-
-@keyframes lds-ring {
-    0% {
-        transform: rotate(0deg);
+        100% {
+            transform: rotate(360deg);
+        }
     }
 
-    100% {
-        transform: rotate(360deg);
-    }
+.load-container{
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
 }
