--- a/src/global.css
+++ b/src/global.css
@@ -3,7 +3,7 @@
 
 .App{
     background-color: #F6F6F6;
-    font-family: 'Poppins';
+    font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
