--- a/src/components/AppAnimal/AppAnimals.css
+++ b/src/components/AppAnimal/AppAnimals.css
@@ -27,18 +27,7 @@
   height: 60vh;
 }
 
-.App-logo{
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 7rem;
-  min-height: 4rem;
-  width: 7rem;
-  height: 4rem;
-}
-
 .pages{
-  margin: 5rem 8rem 5rem 2.5rem;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   color: #F6F6F6;
@@ -50,8 +39,7 @@ a:hover{
 }
 
 .Info-logo{
-  display: flex;
-  width: 30rem;
+  width: 20rem;
   height: auto;
 }
 
@@ -180,12 +168,24 @@ footer{
 .searchBar{
   width: fit-content;
   height: auto;
+}
+
+@media (min-width: ) {
   
+}
+
+.form{
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 1;
 }
 
 .searchField{
   padding-left: 1rem;
-  width: 21rem;
+  min-width: 15.6rem;
   height: 2.5rem;
   font-family: 'Poppins';
   background-color: #c9c9c9;
@@ -200,7 +200,6 @@ footer{
   border-radius: 10px;
   width: 145px;
   height: 40px;
-  margin-left: 2rem;
   background-color: #307e25;
   color: #F6F6F6;
   cursor: pointer;
